ecmascript/parser/tests/test262-error-references/fail/534dac338ea83de6.js.stderr
error: Identifier cannot follow number
 --> $DIR/tests/test262-parser/fail/534dac338ea83de6.js:1:2
  |
1 | 3in []
  |  ^

